--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,6 +5,8 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  background-image: url("../public/ess_background.svg");
+  background-size: cover;
 }
 
 .description {
@@ -60,6 +62,7 @@
 }
 
 .card h2 {
+  font-size: large;
   font-weight: 600;
   margin-bottom: 0.7rem;
 }
@@ -79,6 +82,14 @@
   align-items: center;
   position: relative;
   padding: 4rem 0;
+}
+
+.center h2 {
+  font-size: xx-large;
+  font-weight: 600;
+  margin-bottom: 0.7rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
 }
 
 .center::before {
@@ -108,15 +119,23 @@
 .logo {
   position: relative;
 }
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
     border: 1px solid rgba(var(--card-border-rgb), 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.2px);
+    -webkit-backdrop-filter: blur(7.2px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    transition: 0.3s ease-in-out;
   }
 
   .card:hover span {
     transform: translateX(4px);
+    transition: 0.3s ease-in-out;
   }
 }
 
@@ -179,11 +198,9 @@
     border-radius: 0;
     border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
+    background: linear-gradient(to bottom,
+        rgba(var(--background-start-rgb), 1),
+        rgba(var(--callout-rgb), 0.5));
     background-clip: padding-box;
     backdrop-filter: blur(24px);
   }
@@ -194,11 +211,9 @@
     inset: auto 0 0;
     padding: 2rem;
     height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
+    background: linear-gradient(to bottom,
+        transparent 0%,
+        rgb(var(--background-end-rgb)) 40%);
     z-index: 1;
   }
 }
@@ -224,6 +239,7 @@
   from {
     transform: rotate(360deg);
   }
+
   to {
     transform: rotate(0deg);
   }
