--- a/app/page.module.css
+++ b/app/page.module.css
@@ -85,6 +85,7 @@
 }
 
 .center h2 {
+  display: inline-block;
   font-size: xx-large;
   font-weight: 600;
   margin-bottom: 0.7rem;
@@ -160,6 +161,14 @@
 
   .card {
     padding: 1rem 2.5rem;
+    margin-bottom: 10px;
+    background: rgba(var(--card-rgb), 0.1);
+    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.2px);
+    -webkit-backdrop-filter: blur(7.2px);
+    transition: 0.3s ease-in-out;
   }
 
   .card h2 {
@@ -215,6 +224,11 @@
         transparent 0%,
         rgb(var(--background-end-rgb)) 40%);
     z-index: 1;
+  }
+
+  .center h2 {
+    padding: 1rem;
+    backdrop-filter: blur(7.2px);
   }
 }
 
